veil-tests/src/compile_tests/fail/redact_invalid_flags.rs
fn main() {}

#[derive(veil::Redact)]
struct InvalidChar(#[redact(with = "this isn't a char")] ());

#[derive(veil::Redact)]
struct InvalidFixedWidth(#[redact(fixed = 0)] ());
